# osigpipeline

./: .gitignore  .pre-commit-config.yaml  UCG_ANALYSIS_REPORT.md  debug_alias_hints.py  debug_corrected_dfg.py  debug_drivers.py  dfg_qa_verification.py  direct_dfg_qa.py  examine_output.py  pyproject.toml  qa_validation_suite.py  simple_dfg_test.py  test_corrected_dfg.py  test_corrected_dfg_v2.py  test_criteria_runner.py  test_repo_ingest.py
criteria_output/: catalog.json  run_receipt.json
criteria_output.bak/: catalog.json  run_receipt.json
dlc_output/: catalog.json  run_receipt.json
dlc_output.bak/: catalog.json  run_receipt.json
dlc_output_cfg_baseline/: catalog.json  run_receipt.json
dlc_output_cfg_baseline2/: catalog.json  run_receipt.json
dlc_output_cfg_baseline3/: catalog.json  run_receipt.json  schema.sql
dlc_output_dfg_baseline/: catalog.json  run_receipt.json
dlc_output_full/: catalog.json  run_receipt.json
dlc_output_full10/: run_receipt.json
dlc_output_full11/: catalog.json  run_receipt.json
dlc_output_full12/: run_receipt.json
dlc_output_full13/: catalog.json  run_receipt.json
dlc_output_full14/: catalog.json  run_receipt.json
dlc_output_full15/: run_receipt.json
dlc_output_full16/: catalog.json  run_receipt.json
dlc_output_full16.bak/: catalog.json  run_receipt.json
dlc_output_full17/: run_receipt.json
dlc_output_full17_baseline/: run_receipt.json
dlc_output_full17_v2a/: catalog.json  run_receipt.json
dlc_output_full17_v2b/: run_receipt.json
dlc_output_full2.bak/: catalog.json  run_receipt.json
test_repo/: app.js  (+6 more)
(+583 files in other folders)
